# MergingCommunities-hs

./: LICENSE  MergingCommunities.cabal  README.md
app/: Main.hs
src/: Lib.hs
