name:                MergingCommunities
version:             0.1.0.0
synopsis:            Solution to MergingCommunities problem on Hackerrank.
description:         Utilizes UnionFind
homepage:            https://github.com/caneroj1/MergingCommunities-hs#readme
license:             MIT
license-file:        LICENSE
author:              Joe Canero
maintainer:          jmc41493@gmail.com
copyright:           Copyright: (c) 2016 Joe Canero
category:            Other
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , containers
  default-language:    Haskell2010
  ghc-options:         -O3

executable MergingCommunities-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O3
  build-depends:       base
                     , MergingCommunities
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/caneroj1/MergingCommunities
